# cimat-7mo_semestre-examples_otb

./: CMakeLists.txt  FilteringPipeline.cxx  Multispectral.cxx  Pipeline.cxx
cpp_examples/application/: ApplicationExample.cxx
cpp_examples/basic_filters/: BandMathFilterExample.cxx  CMakeLists.txt  LeeImageFilter.cxx
examples_01/: ScalingPipeline.cxx  VectorPipeline.cxx
examples_02/: CMakeLists.txt  ImageExample.cpp  ImageFilter.cpp
examples_03/: CMakeLists.txt  ImageRegionIterator.cpp  NeighborhoodIterators1.cpp
examples_03/filters/: CMakeLists.txt  CompositeFilterExample.cpp  CustomFilter.h  CustomFilterExample.cpp  FunctorImageFilterExample.cpp  NeighborhoodIteratorFilterExample.cpp
examples_03/iterators/: ImageRegionIterator.cpp  NeighborhoodIterators2.cpp
hello_world/: CMakeLists.txt  HelloWorldOTB.cxx
otb_examples/application/: CMakeLists.txt
otb_examples/basic_filters/: CMakeLists.txt  FrostImageFilter.cxx
otb_examples/filters/: CMakeLists.txt  CompositeFilterExample.cxx  MeanFilterExample.cxx
otb_examples/iterators/: CMakeLists.txt  NeighborhoodIterators1.cxx  NeighborhoodIterators1a.cxx  NeighborhoodIterators1b.cxx  NeighborhoodIteratorsMean.cxx  NeighborhoodIteratorsVariance.cxx
variance/: CMakeLists.txt  SARVarianceFilter.cxx  VarianceFilter.cxx
